apps/xonotic/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: xonotic
    app.kubernetes.io/name: xonotic
  name: xonotic
  namespace: xonotic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: xonotic
      app.kubernetes.io/name: xonotic
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: xonotic
        app.kubernetes.io/name: xonotic
    spec:
      containers:
        - name: xonotic
          image: harbor.engiqueersconcordia.ca/xonotic/xonotic:PLACEHOLDER
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 26000
              name: xonotic
              protocol: UDP
          volumeMounts:
            - mountPath: /app/.xonotic
              name: xonotic-data
            - mountPath: /app/.xonotic/data/server.cfg
              name: xonotic-config
              subPath: server.cfg
            - mountPath: /app/.xonotic/data/secret.cfg
              name: xonotic-secrets
              subPath: secret.cfg
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: xonotic-data
          persistentVolumeClaim:
            claimName: xonotic
        - name: xonotic-config
          configMap:
            name: xonotic
        - name: xonotic-secrets
          secret:
            secretName: xonotic
