apps/xonotic/resources/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: xonotic
  namespace: xonotic
spec:
  ingress:
    - toPorts:
        - ports:
            - protocol: UDP
              port: 26000
